AZRHOL200/Templates/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
  "parameters": {
    "saazrhol200Type": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_ZRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ]
    },
    "vnetazrhol200Name": {
      "type": "string",
      "minLength": 1
    },
    "nicazrhol200Name": {
      "type": "string",
      "minLength": 1
    },
    "pipazrhol200DnsName": {
      "type": "string",
      "minLength": 1
    },
    "vmazrhol200Name": {
      "type": "string",
      "minLength": 1
    },
    "vmazrhol200AdminUserName": {
      "type": "string",
      "minLength": 1
    },
    "vmazrhol200AdminPassword": {
      "type": "securestring"
    },
    "NSGAZRHOL200_name": {
      "defaultValue": "NSGAZRHOL200",
      "type": "String"
    },
    "vmazrhol200WindowsOSVersion": {
      "type": "string",
      "defaultValue": "2012-R2-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "Windows-Server-Technical-Preview"
      ]
    },
      "_artifactsLocation": {
          "type": "string",
          "metadata": {
              "description": "Auto-generated container in staging storage account to receive post-build staging folder upload"
          }
      },
      "_artifactsLocationSasToken": {
          "type": "securestring",
          "metadata": {
              "description": "Auto-generated token to access _artifactsLocation"
          }
      }
  },
    "variables": {
        "saazrhol200Name": "[concat('saazrhol200', 'martijn')]",
        "vnetazrhol200Prefix": "10.0.0.0/16",
        "vnetazrhol200Subnet1Name": "Subnet-1",
        "vnetazrhol200Subnet1Prefix": "10.0.0.0/24",
        "vnetazrhol200Subnet2Name": "Subnet-2",
        "vnetazrhol200Subnet2Prefix": "10.0.1.0/24",
        "nicazrhol200VnetID": "[resourceId('Microsoft.Network/virtualNetworks', 'vnetazrhol200')]",
        "nicazrhol200SubnetRef": "[concat(variables('nicazrhol200VnetID'), '/subnets/', variables('vnetazrhol200Subnet1Name'))]",
        "pipazrhol200Name": "pipazrhol200",
        "vmazrhol200ImagePublisher": "MicrosoftWindowsServer",
        "vmazrhol200ImageOffer": "WindowsServer",
        "vmazrhol200OSDiskName": "vmazrhol200OSDisk",
        "vmazrhol200VmSize": "Standard_D2_v2",
        "vmazrhol200VnetID": "[resourceId('Microsoft.Network/virtualNetworks', 'vnetazrhol200')]",
        "vmazrhol200SubnetRef": "[concat(variables('vmazrhol200VnetID'), '/subnets/', variables('vnetazrhol200Subnet1Name'))]",
        "vmazrhol200StorageAccountContainerName": "vhds",
        "vmazrhol200NicName": "[concat(parameters('vmazrhol200Name'), 'NetworkInterface')]",
        "lfsinstallScriptFolder": "CustomScripts",
        "lfsinstallScriptFileName": "lfsinstall.ps1"
    },
  "resources": [
    {
      "name": "[variables('saazrhol200Name')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-06-15",
      "dependsOn": [ ],
      "tags": {
        "displayName": "saazrhol200"
      },
      "properties": {
        "accountType": "[parameters('saazrhol200Type')]"
      }
    },
    {
      "name": "vnetazrhol200",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-06-15",
      "dependsOn": [ ],
      "tags": {
        "displayName": "vnetazrhol200"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetazrhol200Prefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vnetazrhol200Subnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('vnetazrhol200Subnet1Prefix')]"
            }
          },
          {
            "name": "[variables('vnetazrhol200Subnet2Name')]",
            "properties": {
              "addressPrefix": "[variables('vnetazrhol200Subnet2Prefix')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[parameters('nicazrhol200Name')]",
      "apiVersion": "2016-03-30",
      "location": "westeurope",
      "tags": {
        "displayName": "nicazrhol200"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "10.0.0.4",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipazrhol200Name'))]"
              },
              "subnet": {
                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vnetazrhol200Name')), '/subnets/Subnet-1')]"
              }
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": [ ]
        },
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGAZRHOL200_name'))]"
        }
      },
      "resources": [ ],
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipazrhol200Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetazrhol200Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGAZRHOL200_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('NSGAZRHOL200_name')]",
      "apiVersion": "2016-03-30",
      "location": "westeurope",
      "properties": {
        "securityRules": [
          {
            "name": "LFSserver",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "63392",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          }
        ]
      },
      "resources": [ ],
      "dependsOn": [ ]
    },
    {
      "name": "[variables('pipazrhol200Name')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-06-15",
      "dependsOn": [ ],
      "tags": {
        "displayName": "pipazrhol200"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[parameters('pipazrhol200DnsName')]"
        }
      }
    },
    {
      "name": "[parameters('vmazrhol200Name')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-06-15",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('saazrhol200Name'))]",
        "[concat('Microsoft.Network/networkInterfaces/', parameters('nicazrhol200Name'))]"
      ],
      "tags": {
        "displayName": "vmazrhol200"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmazrhol200VmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('vmazrhol200Name')]",
          "adminUsername": "[parameters('vmazrhol200AdminUsername')]",
          "adminPassword": "[parameters('vmazrhol200AdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('vmazrhol200ImagePublisher')]",
            "offer": "[variables('vmazrhol200ImageOffer')]",
            "sku": "[parameters('vmazrhol200WindowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "vmazrhol200OSDisk",
            "vhd": {
              "uri": "[concat('https://', variables('saazrhol200Name'), '.blob.core.windows.net/', variables('vmazrhol200StorageAccountContainerName'), '/', variables('vmazrhol200OSDiskName'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nicazrhol200Name'))]"
            }
          ]
        }
      },
    "outputs": {
    }
}
